fixed styles + links

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="The Ancient Secrets of Levitation is a stoner rock trio based in Madrid, Spain.">
-    <meta name="keywords" content="stoner rock madrid,The Ancient Secrets of Levitation, tasol">
-	<title>The Ancient Secrets of Levitation - Official website</title>
+    <meta name="keywords" content="stoner rock madrid,The Ancient Secrets of Levitation,t.a.s.o.l.">
+	<title>The Ancient Secrets of Levitation - Official</title>
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <div class="container">
       <section id="links" class="center">
-        <a href="http://secrets.lv/fb" target="_blank" title="Facebook Page">Facebook</a>
-        <a href="http://secrets.lv/bc" target="_blank" title="Listen on Bandcamp">Bandcamp</a>
-        <a href="http://secrets.lv/yt" target="_blank" title="Watch on YouTube">YouTube</a>
+        <a href="http://facebook.com/SecretsOfLevitation/" target="_blank" title="Facebook Page">Facebook</a>
+        <a href="http://theancientsecretsoflevitation.bandcamp.com/" target="_blank" title="Listen on Bandcamp">Bandcamp</a>
+        <a href="http://youtube.com/SecretsOfLevitation" target="_blank" title="Watch on YouTube">YouTube</a>
       </section>
     </div>
   </body>
