--- a/index.html
+++ b/index.html
@@ -17,5 +17,13 @@
         <a href="http://youtube.com/SecretsOfLevitation" target="_blank" title="Watch on YouTube">YouTube</a>
       </section>
     </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-39548922-1', 'secrets.lv');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
