added contact link

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="http://theancientsecretsoflevitation.bandcamp.com/" target="_blank" title="Music">Bandcamp</a>
         <a href="http://youtube.com/SecretsOfLevitation" target="_blank" title="Videos">YouTube</a>
         <a href="http://www.songkick.com/artists/5950384" target="_blank" title="Concerts, gigs, festivals">Tour dates</a>
+        <a href="mailto:tasolband@gmail.com" target="_blank" title="Contact">Contact</a>
       </section>
     </div>
   </body>
