--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="The Ancient Secrets of Levitation is a stoner rock trio based in Madrid, Spain.">
+    <meta name="description" content="The Ancient Secrets of Levitation is a stoner rock trio based in Madrid, Spain. T.A.S.O.L. are Alberto: guitars, Clemente: vocals & bass, Andrea: drums.">
     <meta name="keywords" content="stoner rock madrid,The Ancient Secrets of Levitation,t.a.s.o.l.">
-	<title>The Ancient Secrets of Levitation - Official</title>
+	  <title>The Ancient Secrets of Levitation - Official website</title>
     <link rel="stylesheet" href="css/main.css">
+    <link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <div class="container">
-      <section id="links" class="center">
+      <div id="bg" class="fade-in one"></div>
+      <section id="links" class="center fade-in two">
         <a href="http://facebook.com/SecretsOfLevitation/" target="_blank" title="News">Facebook</a>
         <a href="http://theancientsecretsoflevitation.bandcamp.com/" target="_blank" title="Music">Bandcamp</a>
         <a href="http://youtube.com/SecretsOfLevitation" target="_blank" title="Videos">YouTube</a>
         <a href="http://www.songkick.com/artists/5950384" target="_blank" title="Concerts, gigs, festivals">Tour dates</a>
       </section>
-    </div>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
