--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
   </head>
   <body>
       <div id="bg" class="fade-in one"></div>
-      <section id="links" class="center fade-in two">
+      <section id="links" class="center fade-in three">
         <a href="http://facebook.com/SecretsOfLevitation/" target="_blank" title="News">Facebook</a>
         <a href="http://theancientsecretsoflevitation.bandcamp.com/" target="_blank" title="Music">Bandcamp</a>
         <a href="http://youtube.com/SecretsOfLevitation" target="_blank" title="Videos">YouTube</a>
         <a href="http://www.songkick.com/artists/5950384" target="_blank" title="Concerts, gigs, festivals">Tour dates</a>
         <a href="mailto:tasolband@gmail.com" target="_blank" title="Contact">Contact</a>
       </section>
+      <div id="logo" class="fade-in two"></div>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
