--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no" />
+    <meta name="msapplication-TileColor" content="#000000">
+    <meta name="theme-color" content="#000000">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="The Ancient Secrets of Levitation is a stoner rock trio based in Madrid, Spain. T.A.S.O.L. are Alberto: guitars, Clemente: vocals & bass, Andrea: drums.">
-    <meta name="keywords" content="stoner rock madrid,The Ancient Secrets of Levitation,t.a.s.o.l.">
-	  <title>The Ancient Secrets of Levitation - Official website</title>
+    <meta name="description" content="The Ancient Secrets of Levitation is a stoner rock trio based in Madrid. Alberto: guitars, Clemente: vocals & bass, Andrea: drums.">
+    <meta name="keywords" content="stoner doom grunge rock band madrid tasol">
+	  <title>The Ancient Secrets of Levitation - Official Website</title>
     <link rel="stylesheet" href="css/main.css">
-    <link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+    <!-- Google Analytics -->
+    <link rel="preconnect dns-prefetch" href="https://www.google-analytics.com">
+    <script>
+      window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+      ga('create', 'UA-39548922-1', 'auto');
+    </script>
+    <script async src='https://www.google-analytics.com/analytics.js'></script>
   </head>
   <body>
       <div id="bg" class="fade-in one"></div>
       <section id="links" class="center fade-in three">
-        <a href="http://facebook.com/SecretsOfLevitation/" target="_blank" title="News">Facebook</a>
-        <a href="http://theancientsecretsoflevitation.bandcamp.com/" target="_blank" title="Music">Bandcamp</a>
-        <a href="http://youtube.com/SecretsOfLevitation" target="_blank" title="Videos">YouTube</a>
-        <a href="http://www.songkick.com/artists/5950384" target="_blank" title="Concerts, gigs, festivals">Tour dates</a>
+        <a href="http://theancientsecretsoflevitation.bandcamp.com/" target="_blank" title="BandCamp">Bandcamp</a>
+        <a href="http://youtube.com/SecretsOfLevitation" target="_blank" title="YouTube">YouTube</a>
+        <a href="http://facebook.com/SecretsOfLevitation/" target="_blank" title="Facebook">Facebook</a>
+        <a href="http://www.songkick.com/artists/5950384" target="_blank" title="Songkick (tour dates)">Songkick</a>
         <a href="mailto:tasolband@gmail.com" target="_blank" title="Contact">Contact</a>
       </section>
       <div id="logo" class="fade-in two"></div>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-39548922-1', 'secrets.lv');
-      ga('send', 'pageview');
-    </script>
   </body>
 </html>
